--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "backend server for goodmovies spring19 wbdev",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Purvil Bambharolia",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.22"
-  },
-  "scripts": {
-    "start": "node index.js"
+    "express-session": "^1.15.6",
+    "mongoose": "^5.4.22",
+    "mongoose-unique-validator": "^2.0.2"
   }
-
 }
